--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -55,25 +55,8 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <RelativePanel Name="TitleRelativePanel" Background="WhiteSmoke">
-
-
-            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
-                <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
-            </Button>
-
-
-
-
-        </RelativePanel>
-        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopLeft" IsHitTestVisible="False"
-               Width="10" Height="10" Fill="Red"
-               VerticalAlignment="Top" HorizontalAlignment="Left"/>
         
 
-        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopRight" IsHitTestVisible="False"
-               Width="10" Height="10" Fill="Red"
-               VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <!--
         <StackPanel Name="ControlStackPanel" Visibility="Collapsed" Orientation="Horizontal" FlowDirection="RightToLeft">
             <Button VerticalAlignment="Top" Style="{StaticResource MyButtonStyle}" Foreground="Black" Background="{StaticResource Title_Background}" Margin="0 -32 0 0" Click="EditButton_Click">
@@ -91,12 +74,23 @@
         </StackPanel>
         -->
 
-        <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Visible"  Grid.Row="0" Margin="10 0 10 0"
+        
+        <RelativePanel Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
+
+
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
+                <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
+            </Button>
+
+
+
+
+        </RelativePanel>
+        <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Collapsed"  Grid.Row="0" Margin="10 0 10 0"
         VerticalAlignment="Center" 
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
-
-        <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed">
+        <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed" >
             <SymbolIcon Symbol="Camera" />
         </Button>
         <!-- Photo service -->
@@ -136,9 +130,17 @@
         <Rectangle Grid.Row ="1" x:Name="ResizeRectangleBottomLeft" IsHitTestVisible="False"
                Width="10" Height="10" Fill="Red"
                VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
+        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopLeft" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Top" HorizontalAlignment="Left"/>
 
 
-        <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.5" Margin="10 10 10 10"  Name="MovingGrid" >
+        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopRight" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Top" HorizontalAlignment="Right"/>
+
+
+        <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.1" Visibility="Collapsed" Margin="10 10 10 10"  Name="MovingGrid" >
 
 
         </Grid>
