--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -24,12 +24,13 @@
     <Grid Background="WhiteSmoke" BorderBrush="LightGray" Name="OutlineGrid">
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="20"></RowDefinition>
             <RowDefinition Height="48"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="20"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Name="contentGrid" Grid.Row="1">
+        <Grid Name="contentGrid" Grid.Row="2">
 
             <!-- The canvas where we render the replacement text and shapes. -->
             <!--
@@ -42,7 +43,7 @@
 
 
         </Grid>
-        <Grid Name="categoryGrid"  Grid.Row="1">
+        <Grid Name="categoryGrid"  Grid.Row="2">
 
             <StackPanel Name="SelectionStackPanel"  Width="200"  HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Click="DrawingButton_Click"  Name="DrawingButton" Height="{StaticResource categoryButtonHeight}">
@@ -76,27 +77,27 @@
         </StackPanel>
         -->
 
-        
-        <RelativePanel Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
+
+        <RelativePanel Name="TitleRelativePanel" Grid.Row="1" Visibility="Visible" Background="WhiteSmoke">
 
 
-            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" 
+                    Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
                 <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
-
-
-
-
         </RelativePanel>
-        <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Collapsed"  Grid.Row="0" Margin="10 0 10 0"
+
+        <InkToolbar x:Name="inkToolbar" Background="LightGray"   Visibility="Collapsed"  Grid.Row="1" 
         VerticalAlignment="Center" 
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
-        <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed" >
+        
+        <Button Height="40" Width="50" Name="PhotoButton" Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" 
+                Grid.Row="1" HorizontalAlignment="Right" Margin="0 0 20 0"  Visibility="Collapsed">
             <SymbolIcon Symbol="Camera" />
         </Button>
         <!-- Photo service -->
-        <Grid Background="WhiteSmoke" Grid.Row="1"
+        <Grid Background="WhiteSmoke" Grid.Row="2"
               Name="CameraCanvas"
               RelativePanel.AlignRightWithPanel="True" Visibility="Collapsed">
             <photovideoservice:PhotoVideoCaptureControl x:Name="captureControl"></photovideoservice:PhotoVideoCaptureControl>
@@ -123,21 +124,24 @@
             </StackPanel>
 
         </Grid>
-        
-            <ScrollViewer  Grid.Row="1" x:Name="scrollViewer" Visibility="Collapsed" ZoomMode="Enabled" MinZoomFactor="1" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto" HorizontalScrollMode="Enabled" HorizontalScrollBarVisibility="Auto">
-                <Grid Background="Beige" Margin="10 10 10 10" x:Name="scrollGrid">
 
-                <InkCanvas Grid.Row="1" Visibility="Collapsed" Margin="10 10 10 10" x:Name="inkCanvas" />
-                <local:AddInImageControl Grid.Row="1" Visibility="Collapsed" x:Name="imageControl"/>
+        <ScrollViewer  Grid.Row="2" x:Name="scrollViewer" Visibility="Collapsed" ZoomMode="Enabled" MinZoomFactor="1" 
+                           VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto" HorizontalScrollMode="Enabled" 
+                       HorizontalScrollBarVisibility="Auto">
+            <Grid x:Name="scrollGrid">
+
+                <InkCanvas Grid.Row="2" Visibility="Collapsed" x:Name="inkCanvas" />
+                <local:AddInImageControl Grid.Row="2" Visibility="Collapsed" x:Name="imageControl"/>
                 </Grid>
-            </ScrollViewer>
-
-
             
+        </ScrollViewer>
 
 
 
-        <Grid Grid.Row="0" Background="White" Opacity="0.1"  Visibility="Collapsed" Name="MovingGrid" >
+
+
+
+        <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.5" Visibility="Collapsed" Name="MovingGrid" >
         </Grid>
         <!--<Rectangle Grid.Row ="2" x:Name="ResizeRectangleBottomRight" IsHitTestVisible="False"
                Width="20" Height="20" Fill="red"
