--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -61,6 +61,9 @@
             <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
                 <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="minimizeButton" Click="Minimize_Click" Margin="60,6,-6,-6">
+                <SymbolIcon Symbol="Remove" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
+            </Button>
         </RelativePanel>
         
         <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Collapsed"  Grid.Row="1" 
