--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -360,13 +360,15 @@
         </ScrollViewer>
 
         <Grid Name="addinBase" Grid.Column="0" Grid.ColumnSpan="2"
-              Background="WhiteSmoke" Width="400" HorizontalAlignment="Left">
+              Background="White" Width="400" HorizontalAlignment="Left">
             <TextBlock VerticalAlignment="Top" Grid.Row="0" HorizontalAlignment="Right"                     
                        FontSize="30" Foreground="Black" Margin="10 10 10 10">Add-in Box</TextBlock>
-            <GridView>
+            <GridView Name="addinlist" Margin="10 70 10 10">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="fileservice:ImageAndAnnotation">
-                        <customcontrol:AddInControl name="{x:Bind name}" notebookId="{x:Bind notebookId}" viewOnly="True" pageId="{x:Bind pageId}"></customcontrol:AddInControl>
+                        <Button Click="addInIcon_Click">
+                            <customcontrol:AddInControl name="{x:Bind name}" notebookId="{x:Bind notebookId}" viewOnly="True" pageId="{x:Bind pageId}"></customcontrol:AddInControl>
+                        </Button>
                     </DataTemplate>
                 </GridView.ItemTemplate>
             </GridView>
