--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -359,10 +359,10 @@
             </Grid>
         </ScrollViewer>
 
-        <Grid Name="addinBase" Grid.Column="0" Grid.ColumnSpan="2"
-              Background="White" Width="400" HorizontalAlignment="Left">
+        <Grid x:Name="addinBase" x:FieldModifier="public" Grid.Column="0" Grid.ColumnSpan="2" Visibility="Collapsed"
+              Background="WhiteSmoke" Width="400" HorizontalAlignment="Left">
             <TextBlock VerticalAlignment="Top" Grid.Row="0" HorizontalAlignment="Right"                     
-                       FontSize="30" Foreground="Black" Margin="10 10 10 10">Add-in Box</TextBlock>
+                       FontSize="30" Foreground="Black" Margin="20 10 20 10">Add-in Box</TextBlock>
             <GridView Name="addinlist" Margin="10 70 10 10">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="fileservice:ImageAndAnnotation">
@@ -375,7 +375,7 @@
         </Grid>
 
         <Button Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Top" 
-                Margin="10 10 10 10"
+                Margin="10 10 10 10" ToolTipService.ToolTip="Toggle Add-In Box"
                 Click="AddinsButton_Click">
             <SymbolIcon Symbol="Pictures"/>
         </Button>
