--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -264,10 +264,10 @@
                             </ToolTipService.ToolTip>
                             <Grid>
                                 <StackPanel>
-                                <FontIcon FontSize="24" FontFamily="Segoe MDL2 Assets" Glyph="&#xE702;" HorizontalAlignment="Left" Width="20" Height="20" VerticalAlignment="Top">
+                                    <FontIcon FontSize="24" FontFamily="Segoe MDL2 Assets" Glyph="&#xE702;" HorizontalAlignment="Left" Width="20" Height="20" VerticalAlignment="Top">
                                     </FontIcon>
                                     <TextBlock FontSize="12" Name="bluetoothStatusText" Text="OFF"></TextBlock>
-                                
+
                                 </StackPanel>
                             </Grid>
                         </Button>
@@ -276,16 +276,16 @@
                         <ToggleButton  Height="60" HorizontalAlignment="Stretch"  Style="{StaticResource MyToggleButtonStyle2}" Background="{StaticResource Left_Panel_Title_BG}" x:Name="audioButton" x:FieldModifier="public"  IsEnabled="False" Click="AudioStreamButton_Clicked"
                                     >
                             <StackPanel>
-                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE720;" HorizontalAlignment="Left" Width="21"/>
+                                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE720;" HorizontalAlignment="Left" Width="21"/>
                                 <TextBlock FontSize="12" Name="audioStatusText" Text="OFF"></TextBlock>
                             </StackPanel>
                         </ToggleButton>
 
                         <ToggleButton Visibility="Collapsed" Height="50" HorizontalAlignment="Stretch" Name="shutterButton"  Style="{StaticResource MyToggleButtonStyle2}" Background="{StaticResource Left_Panel_Title_BG}"
                               Click="CameraButton_Click">
-                           
-                                <SymbolIcon Symbol="WebCam"></SymbolIcon>
-                                
+
+                            <SymbolIcon Symbol="WebCam"></SymbolIcon>
+
                         </ToggleButton>
 
                         <ToggleButton  Height="60" HorizontalAlignment="Stretch" Name="StreamButton"   Click="StreamButton_Click" Style="{StaticResource MyToggleButtonStyle2}" Background="{StaticResource Left_Panel_Title_BG}"
@@ -558,11 +558,96 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </local:ChatListView>
+                       
                     </Grid>
 
-                </Grid>
+                    <Grid Name="pastSpeechView" Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Visibility="Collapsed" Padding="5" Background="White">
+                        <local:ChatListView x:Name="pastchatView" Grid.Row="0" 
+                            IncrementalLoadingThreshold="2" Margin="10" 
+                            BorderBrush="White" BorderThickness="2"
+                            ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <!--" ItemsStackPanel ItemsUpdatingScrollMode="KeepLastItemInView" VerticalAlignment="Bottom"/-->
+                                    <ItemsStackPanel ItemsUpdatingScrollMode="KeepLastItemInView"  VerticalAlignment="Bottom"/>
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
 
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="Padding" Value="0"/>
+                                    <Setter Property="Margin" Value="0"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+
+                            <ListView.ItemContainerTransitions>
+                                <TransitionCollection/>
+                            </ListView.ItemContainerTransitions>
+
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="local:TextMessage">
+                                    <Grid Margin="6">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <!--Finalized message color-->
+                                        <Grid
+                            Grid.Row="0"
+                            Grid.Column="{Binding TextColumn}"
+                            Background="{Binding Converter={StaticResource bcConverter}}"
+                            Visibility="{x:Bind Path=IsFinal}"/>
+
+                                        <Grid
+                            Grid.Row="0"
+                            Grid.Column="{Binding TextColumn}">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+
+                                            <TextBlock
+                                Text="{x:Bind Body}"
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                TextWrapping="Wrap"
+                                MinWidth="300"
+                                MaxWidth="500"
+                                FontSize="18"
+                                Padding="10"
+                                VerticalAlignment="Center"
+                                Foreground="Black"/>
+
+                                <Button Grid.Row="1" 
+                                    Background="Transparent"
+                                    HorizontalAlignment="Left">
+                                                <TextBlock
+                                    FontSize="14"
+                                    Text="{Binding Converter={StaticResource intervalConverter}}"
+                                    TextWrapping="Wrap"
+                                    Padding="3" 
+                                    Foreground="Black"
+                                />
+                                            </Button>
+                                        </Grid>
+
+                                     
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </local:ChatListView>
+                    </Grid>
+
+
+                </Grid>
             </SplitView.Pane>
+
+            
 
             <Grid Background="LightGray">
                 
