--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -194,9 +194,9 @@
             <SplitView.Pane>
                 <Grid Name="QuickViewGrid" BorderThickness="0 0 0 0" Background="Transparent">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="200"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="300"/>
-                        <RowDefinition Height="300"/>
+                        <RowDefinition Height="270"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
@@ -337,7 +337,7 @@
                         </ListView>
                     </Grid>
 
-                    <Grid Name="QuickView2" MaxHeight="300" Background="White" Grid.Row="1" Grid.Column="1" >
+                    <Grid Name="QuickView2" Height="auto" Background="White" Grid.Row="1" Grid.Column="1" >
 
                         <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="suggestedPhenoListView"  ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
 
@@ -562,8 +562,9 @@
                     </Grid>
 
                     <Grid Name="pastSpeechView" Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Visibility="Collapsed" Padding="5" Background="White">
+                        <TextBlock Text="Past Conversations" FontWeight="SemiBold" FontSize="18" HorizontalAlignment="Left" Margin="10 10 20 10" />
                         <local:ChatListView x:Name="pastchatView" Grid.Row="0" 
-                            IncrementalLoadingThreshold="2" Margin="10" 
+                            IncrementalLoadingThreshold="2" Margin="0 50 0 0" 
                             BorderBrush="White" BorderThickness="2"
                             ScrollViewer.VerticalScrollBarVisibility="Hidden">
                             <ListView.ItemsPanel>
@@ -616,24 +617,23 @@
                                 Grid.Row="0"
                                 Grid.Column="0"
                                 TextWrapping="Wrap"
-                                MinWidth="300"
-                                MaxWidth="500"
-                                FontSize="18"
+                                MinWidth="300"                                
+                                FontSize="15"
                                 Padding="10"
                                 VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
                                 Foreground="Black"/>
 
-                                <Button Grid.Row="1" 
-                                    Background="Transparent"
-                                    HorizontalAlignment="Left">
-                                                <TextBlock
-                                    FontSize="14"
+                               <TextBlock
+                                    Grid.Row="1"
+                                    FontSize="11"
                                     Text="{Binding Converter={StaticResource intervalConverter}}"
                                     TextWrapping="Wrap"
                                     Padding="3" 
+                                    Margin="5"
                                     Foreground="Black"
                                 />
-                                            </Button>
+                              
                                         </Grid>
 
                                      
